--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SimpleButtonListener">
-        <activity android:name=".Help"></activity>
+        <activity android:name=".Display"></activity>
+        <activity android:name=".Help" />
         <activity android:name=".About" />
         <activity android:name=".Home" />
         <activity android:name=".DisplayText" />
